Added Calligraphy Practice to list of projects

--- a/index.html
+++ b/index.html
@@ -31,6 +31,26 @@
 		<header class="container_12">
 			<h1 class="grid_12">Recent Work.</h1>
 		</header>
+		
+		<section class="project container_12" id="calligraphy">
+			
+			<aside class="grid_8">	
+
+				<iframe width="620" height="349" src="http://www.youtube.com/embed/vkhwm4x7FNk?rel=0" frameborder="0" allowfullscreen></iframe>
+			</aside>
+			<section class="grid_4">	
+				<h2>Calligraphy Practice</h2>
+				<p> Client: João Brandão</p>
+				<p> Role: iOS Developer</p>
+				<p><a href="http://callygraphypractice.com">callygraphypractice.com</a></p>
+
+				<p> The Calligraphy practice app was developed to be the best software to learn, practice and develop calligraphy.</p>
+<p>This project was designed from scratch to appeal both to the beginner and expert calligrapher because of its easy tracing system, and advanced calligraphic brush tool.
+				</p>	
+	
+			</section>
+		</section>
+
 			
 		<section class="project container_12" id="splitbrowser">
 			<section class="grid_4">	
