Added Galeria Monumetal project to portfolio

--- a/index.html
+++ b/index.html
@@ -32,12 +32,10 @@
 			<h1 class="grid_12">Recent Work.</h1>
 		</header>
 		
+		
 		<section class="project container_12" id="calligraphy">
 			
-			<aside class="grid_8">	
-
-				<iframe width="620" height="349" src="http://www.youtube.com/embed/vkhwm4x7FNk?rel=0" frameborder="0" allowfullscreen></iframe>
-			</aside>
+			
 			<section class="grid_4">	
 				<h2>Calligraphy Practice</h2>
 				<p> Client: João Brandão</p>
@@ -49,6 +47,24 @@
 				</p>	
 	
 			</section>
+			<aside class="grid_8">	
+
+				<iframe width="620" height="349" src="http://www.youtube.com/embed/vkhwm4x7FNk?rel=0" frameborder="0" allowfullscreen></iframe>
+			</aside>
+		</section>
+
+		<section class="project container_12" id="monumental">
+			<aside class="grid_8 faux-browser">	
+				<img class="" src="img/monumental.png" alt="Galeria Monumental">
+			</aside>	
+			<section class="grid_4">	
+				<h2>Galeria Monumental</h2>
+				<p> Role: Frontend and Backend Developer </p>
+				<p><a href="http://www.galeriamonumental.com">galeriamonumental.com</a></p>
+
+				<p> Galeria Monumental is an art gallery in Lisbon, Portugal, that has been active since 1986.Centres on contemporany art, promoting young artists from Portugal and abroad, Galeria Monumental, it has experimented in several areas, including multimedia, painting, sculpture, photography, video, performance art and installations by Portuguese and foreign artists, staging exhibitions in public spaces, galleries, museums and art fairs in Portugal and abroad.<p>		
+			</section>
+
 		</section>
 
 			
