--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 				<p> Role: Frontend and Backend Developer </p>
 				<p><a href="http://www.galeriamonumental.com">galeriamonumental.com</a></p>
 
-				<p> Galeria Monumental is an art gallery in Lisbon, Portugal, that has been active since 1986.Centres on contemporany art, promoting young artists from Portugal and abroad, Galeria Monumental, it has experimented in several areas, including multimedia, painting, sculpture, photography, video, performance art and installations by Portuguese and foreign artists, staging exhibitions in public spaces, galleries, museums and art fairs in Portugal and abroad.<p>		
+				<p> Galeria Monumental is an art gallery in Lisbon, Portugal, that has been active since 1986. It centers on contemporary art, promoting young artists from Portugal and abroad, and has experimented in several areas, including multimedia, painting, sculpture, photography, video, performance art and installations by Portuguese and foreign artists, staging exhibitions in public spaces, galleries, museums and art fairs in Portugal and abroad.</p>		
 			</section>
 
 		</section>
