Some experiments with intro copy

--- a/index.html
+++ b/index.html
@@ -26,6 +26,12 @@
 		</nav>
 	</header>
 </header>
+
+	<section id="intro" >
+		<header class="container_12">
+		<h2 class="grid_12">Hi I'm Vasco. I work on iOS and Web Apps</h2>
+		</header>
+	</section>
 	
 	<section id="recent_work" >
 		<header class="container_12">
