Change contact copy

--- a/index.html
+++ b/index.html
@@ -27,12 +27,6 @@
 	</header>
 </header>
 
-	<section id="intro" >
-		<header class="container_12">
-		<h2 class="grid_12">Hi I'm Vasco. I work on iOS and Web Apps</h2>
-		</header>
-	</section>
-	
 	<section id="recent_work" >
 		<header class="container_12">
 			<h1 class="grid_12">Recent Work.</h1>
@@ -141,14 +135,15 @@ A Associação Educativa para o Desenvolvimento da Criatividade is a non-profit 
 		</header>
 		<section class="container_12">
 			<section class="grid_12">
-				<p>Get in Touch! <a href="mailto:info@elasticfiction.com">info@elasticfiction.com</a></p>
+				<p>Hi, my name is Vasco Conde.</p>
+				<p>Get in <a href="mailto:vasco@elasticfiction.com">touch</a> if you want to hire me or talk about your project.</p>
 			</section>
 		</section>
 	</section>
 
 	<footer >
 		<section class="container_12">
-			©2012 Elastic Fiction, lda
+			©2014 Elastic Fiction, lda
 		</section>
 	</footer>
 </body>
