Add link to personal page

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@ A Associação Educativa para o Desenvolvimento da Criatividade is a non-profit 
 		</header>
 		<section class="container_12">
 			<section class="grid_12">
-				<p>Hi, my name is Vasco Conde.</p>
+				<p>Hi, my name is <a href="http://vascoconde.com">Vasco Conde</a>.</p>
 				<p>Get in <a href="mailto:vasco@elasticfiction.com">touch</a> if you want to hire me or talk about your project.</p>
 			</section>
 		</section>
