Correct link to Calligraphy Practice

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 				<h2>Calligraphy Practice</h2>
 				<p> Client: João Brandão</p>
 				<p> Role: iOS Developer</p>
-				<p><a href="http://callygraphypractice.com">callygraphypractice.com</a></p>
+				<p><a href="http://calligraphypractice.com">callygraphypractice.com</a></p>
 
 				<p> The Calligraphy practice app was developed to be the best software to learn, practice and develop calligraphy.</p>
 <p>This project was designed from scratch to appeal both to the beginner and expert calligrapher because of its easy tracing system, and advanced calligraphic brush tool.
